--- a/css/okayNav-theme-light.css
+++ b/css/okayNav-theme-light.css
@@ -41,7 +41,7 @@ header{
 }
 #nav-main a.nav-link {
   text-decoration: none;
-  color: #8c8c8c;
+  color: #92c83e;
   font-size: 1.4rem;
   font-weight: 600;
   text-transform: uppercase;
